Changing Project Titel name.

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 					<div class="main-slider pattern-overlay">
 						<div class="slider-item">
 							<div class="banner-content">
-								<h2 class="banner-title">AI نوابغ </h2>
+								<h2 class="banner-title">Smart Scholarly</h2>
 								<p>This site is a miniature model of a search engine that uses artificial intelligence to search academic databases and electronic libraries to access the most relevant research on a specific topic, while providing automatic self-summaries and intelligent indexing of research papers.</p>
 								
 							</div><!--banner-content-->
