Add a github profile linke to the site

--- a/index.html
+++ b/index.html
@@ -624,7 +624,7 @@
 						<h5>Our Team</h5>
 						<ul class="menu-list">
 							<li class="menu-item">
-								<a href="#">Ali Salim AL-Rawahi</a>
+								<a href="https://github.com/alitoly">Ali Salim AL-Rawahi</a>
 							</li>
 							<li class="menu-item">
 								<a href="#">Qais Jameel AL-Rahbi</a>
